--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,1 +1,53 @@
-index.html.erb
+<div class="purchase">
+ <div class="container-fulid">
+  <div class="row">
+  	<div class="col-lg-1">
+  	 </div>
+  	<div class="col-lg-10">
+      <div class="order_index">
+        <h2>購入履歴一覧</h2>
+        <table class="table table-striped order_index_table">
+          <thead class="order_table_head">
+            <tr>
+              <th class="col-sm-2 order-index-th">購入番号</th>
+              <th class="col-sm-2 order-index-th">ユーザーネーム</th>
+              <th class="col-sm-3 order-index-th">購入日時</th>
+              <th class="col-sm-2 order-index-th">合計金額</th>
+              <th class="col-sm-2 order-index-th">ステータス</th>
+              <th class="col-sm-1"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="order_index_td">5555−5555</td>
+              <td class="order_index_td">田中角栄</td>
+              <td class="order_index_td">2018/06/28 15:00</td>
+              <td class="order_index_td">3500円</td>
+              <td class="order_index_td">発送済み</td>
+              <td class="order_index_td show_link_btn"><a href="" title="">詳細</a></td>
+            </tr>
+            <tr>
+              <td class="order_index_td">5555−5555</td>
+              <td class="order_index_td">田中角栄</td>
+              <td class="order_index_td">2018/06/28 15:00</td>
+              <td class="order_index_td">3500円</td>
+              <td class="order_index_td">発送済み</td>
+              <td class="order_index_td show_link_btn"><a href="" title="">詳細</a></td>
+            </tr>
+            <tr>
+              <td class="order_index_td">5555−5555</td>
+              <td class="order_index_td">田中角栄</td>
+              <td class="order_index_td">2018/06/28 15:00</td>
+              <td class="order_index_td">3500円</td>
+              <td class="order_index_td">発送済み</td>
+              <td class="order_index_td show_link_btn"><a href="" title="">詳細</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  	<div class="col-lg-1">
+  	</div>
+  </div>
+ </div>
+</div>
