--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,7 +81,7 @@
  }
 
 
-.label {
+/*.label {
   margin-bottom: 0px;
 }
 #user_email, #user_password,#user_current_password, #user_password_confirmation, #user_tell, #user_address, #user_postal, #user_user_name, #user_user_phonetic {
@@ -99,7 +99,7 @@ th , td {
 .td_color {
   background-color: #eeeeee;
   width: 200px;
-}
+}*/
 
 .login_btn, .post_btn, .change_btn, .signup_btn, .edit_btn{
   background-color: black;
@@ -259,53 +259,7 @@ th , td {
 
 
 
-/*以下渡辺*/
-/*product/new/*/
-.product_new_inner{
-  height: 100%;
-}
-.product_new_main{
-}
-.product_new_topbottom{
-  height: 100px;
-  z-index: 1;
-}
 
-.product_new_heading{
-  text-align: center;
-}
-.product_new_heading h1{
-  display: inline-block;
-}
-.product_new_form{
-  border: 1px solid gray;
-  border-radius: 10px;
-  box-shadow: 0 0 5px gray;
-  padding-top: 50px;
-}
-.tune-form-group{
-  margin-right: 10px;
-}
-.tune-new-btn{
-  margin-top: 25px;
-  margin-left: 40px;
-}
-.tune_new_table{
-  box-shadow: 0 0 5px gray;
-}
-.tune_table_head{
-  background-color: black;
-  color: white;
-  font-size: 16px;
-}
-.tune_new_navi{
-  margin-top: 50px;
-  text-align: right;
-}
-.tune_new_navi_list{
-  display: inline-block;
-  margin-right: 50px;
-}
 
 
 
@@ -731,9 +685,9 @@ header{
   color: #FF6600;
 }
 
-td {
+/*td {
   padding:0 !important;
-}
+}*/
 
 
 
