--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,7 +29,9 @@
 .td-purchase {
   height:80px;
   vertical-align: inherit !important;
+  padding:0  !important;
 }
 .th-purchase {
   text-align:center !important;
+  padding:0 !important;
 }
