--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -73,11 +73,7 @@
 			</div>
 		</div>
 
-　　　　　　<% flash.each do |key, value| %>
-           <div class="alert alert-<%= key %>">
-             <%= value %>
-           </div>
-          <% end %>
+　　　　　　<%= flash[:danger] %>
 
 		<div class="product-comment">
 			<div class="review-count">
