パスワードリマインダー機能実装、user関連のビューの修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 		<div class="link1">cartへのリンク</div>
 		<div class="link2"><%= link_to "マイページ", user_path(current_user.id) %></div>
 		<div class="link3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div>
+
 	</div>
 
 	<% else %>
@@ -43,6 +44,12 @@
 	</div>
 
 </header>
+<% if notice %>
+　　<p class="message"><%= notice %></p>
+<% end %>
+<% if alert %>
+   <p class="message"><%= alert %></p>
+<% end %>
 <%= yield %>
 <footer>
 		<div class="footer-text">
