--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -7,7 +7,7 @@
     <%= devise_error_messages! %>
       <tr>
         <div class="field">
-          <td class="td_color"><%= f.label :メールアドレス %><br /></td>
+          <td class="td_color"><%= f.label :メールアドレス,class: "label_name"  %><br /></td>
           <td><%= f.email_field :email, autofocus: true, autocomplete: "email" %></td>
         </div>
       </tr>
