ユーザー関連編集中

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -298,8 +298,15 @@
 .user_confirm_headline {
   margin: 20px 0;
 }
- /*admin_login*/
-
+ // ユーザー一覧
+ .edit_link {
+   padding-left: 50px;
+   float: left;
+ }
+.unsubscribe_link {
+  padding-right: 50px;
+  float: right;
+}
 
 
 
