--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -28,7 +28,7 @@
   border-color:#dcdcdc;
 }
 
-.cart-item .col-md-2 {
+.cart_item_2 {
   line-height:80px;
 }
 .cart-item .col-md-3 {
@@ -36,4 +36,8 @@
 }
 .cart-item .col-md-1 {
   line-height:80px;
+}
+.cart_quantity_form{
+  margin-top: 29px;
+  width: 54px;
 }
