--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,93 +1,60 @@
 <div class="cart">
- <div class="container">
-  <div class="row">
-  	
-      	<div class="col-lg-2">
-      	</div>
-
-      	<div class="col-lg-8">
-      	
-      	<h3>カート内商品</h3>
-      	<div class="cart-detail clearfix">
-        	 
-           <div class="cart-item">
-        	  <div class="cart-image col-md-2">
-        	  	NO IMAGE
-        	  </div>
-        	  <div class="col-md-3">10fold
-        	  </div>
-        	   <div class="col-md-2">UNCHAIN
-        	  </div>
-        	  <div class="col-md-2">数量 1
-        	  </div>
-        	  <div class="col-md-2"> 3,240円
-        	  </div>
-        	  <div class="col-md-1"><button class="btn btn-danger">削除</button>
-        	  </div>
-      	  </div>
-         
-           <div class="cart-item">
-            <div class="cart-image col-md-2">
-              NO IMAGE
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <% if @cart_items.present? %>
+        <h3>カート内商品</h3>
+          <div class="cart-detail clearfix">
+            <% @cart_items.each do |cart_item| %>
+            <% @product = cart_item.product %>
+              <div class="cart-item">
+                <div class="col-md-2 cart_item_2">
+                  <%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg' %>
+                </div>
+                <div class="col-md-3"><%= cart_item.product.product_name %>
+                </div>
+                <div class="col-md-2 cart_item_2"><%= cart_item.product.artist.artist_name %>
+                </div>
+                <div>
+                <div class="col-md-2">
+                  <%= form_for [@product, cart_item] do |f| %>
+                  <%= f.number_field :cart_quantity, class: 'cart_quantity_form', min: 0 %>個
+                  <%= f.submit '更新', class: 'btn btn-default btn-xs' %>
+                  <% end %>
+                </div>
+                </div>
+                <div class="col-md-2 cart_item_2"><%= cart_item.product.product_price*cart_item.cart_quantity %> 円
+                  <%
+                   @total_price += cart_item.product.product_price*cart_item.cart_quantity
+                  %>
+                </div>
+                <div class="col-md-1"><%= link_to '削除', product_cart_item_path(:product_id => cart_item.product.id, :id => cart_item.id), method: :delete, class: "btn btn-danger" %>
+                </div>
+              </div>
+            <% end %>
+            <div class="row">
+              <div class="col-md-9"></div>
+              <div class="col-md-3">
+                <p>
+                  合計金額：<%= @total_price %>円
+                </p>
+              </div>
             </div>
-            <div class="col-md-3">10fold
-            </div>
-             <div class="col-md-2">UNCHAIN
-            </div>
-            <div class="col-md-2">数量 1
-            </div>
-            <div class="col-md-2"> 3,240円
-            </div>
-            <div class="col-md-1"><button class="btn btn-danger">削除</button>
-            </div>
-          </div>
-
-
-          <div class="cart-item">
-            <div class="cart-image col-md-2">
-              NO IMAGE
-            </div>
-            <div class="col-md-3">10fold
-            </div>
-             <div class="col-md-2">UNCHAIN
-            </div>
-            <div class="col-md-2">数量 1
-            </div>
-            <div class="col-md-2"> 3,240円
-            </div>
-            <div class="col-md-1"><button class="btn btn-danger">削除</button>
+            <div class="row">
+              <div class="col-md-9">
+              </div>
+               <div class="col-md-3">
+                <button class="btn btn-warning">支払い情報入力へ</button>
+              </div>
             </div>
           </div>
-
-          <div class="cart-item">
-            <div class="cart-image col-md-2">
-              NO IMAGE
-            </div>
-            <div class="col-md-3">10fold
-            </div>
-             <div class="col-md-2">UNCHAIN
-            </div>
-            <div class="col-md-2">数量 1
-            </div>
-            <div class="col-md-2"> 3,240円
-            </div>
-            <div class="col-md-1"><button class="btn btn-danger">削除</button>
-            </div>
-          </div>
-
-      	  <div class="col-md-7">
-      	  </div>
-          <div class="col-md-2">
-            <button class="btn btn-info">カート内更新</button>
-          </div>
-      	  <div class="col-md-3">
-      			<button class="btn btn-warning">支払い情報入力へ</button>
-      		</div>
-      	  </div>
-      	</div>
-
-  	    <div class="col-lg-2">
-  	    </div>
-   </div>
+        <% else %>
+          <h4>カートに商品はありません</h4>
+        <% end %>
+      </div>
+      <div class="col-lg-2">
+      </div>
+    </div>
   </div>
  </div>
