--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
 	<% if user_signed_in? %>
 
 	<div class="header-links">
-		<div class="link1">cartへのリンク</div>
+		<% cart = Cart.find_by(user_id: current_user.id) %>
+		<div class="link1"><%= link_to 'カート', cart_path(cart)  %></div>
 		<div class="link2"><%= link_to "マイページ", user_path(current_user.id) %></div>
 		<div class="link3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></div>
 
