--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -149,13 +149,81 @@
 
 
 
-
-
-
-
-
-
-
+.order-back {
+width:100%;
+height:100%;
+background-color:#dcdcdc;
+padding-top:30px;
+}
+.order {
+background-color:white;
+margin:0 auto 30px;
+padding:0 0 20px 0;
+border:outset;
+text-align:center;
+}
+.order-box {
+margin:0 auto;
+border:inset 3px;
+padding-top:2px;
+}
+.sendbox {
+text-align:center;
+height:130px;
+}
+.address-form {
+width:500px;
+height:30px;
+margin:0 auto;
+}
+.delivery {
+font-size:20px;
+text-align:center;
+height:150px;
+}
+.delivery-box {
+width:500px;
+height:30px;
+margin:10px auto 0 ;
+color:#dcdcdc;
+border:solid 1px;
+border-radius:5px;
+border-color:#dcdcdc;
+}
+.pay {
+text-align:center;
+height:100px;
+}
+.preorder {
+text-align:center;
+}
+.pre-product {
+width:500px;
+height:100px;
+border:solid 1px;
+margin:5px auto 10px;
+padding:8px 0 0 8px;
+border-radius: 5px;
+border-color:#dcdcdc;
+}
+.price-table {
+float:right;
+margin:0 10px 10px 0;
+}
+.product-image {
+width:80px;
+height:80px;
+border:solid 1px;
+float:left;
+}
+.order-text {
+float:left;
+line-height: 80px;
+}
+.preorder-price {
+float:right;
+margin:50px 5px 0 0;
+}
 
 
 
